--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,9 @@
 import { Image } from "astro:assets"
 import logo from "../images/logo.jpg"
 import background from "../images/bg3.jpg"
-import cable from "../images/cable.jpg"
-import brick from "../images/bricks.jpg"
+import deliver from "../images/deliver.png"
+import install from "../images/install.png"
+import request from "../images/request.png"
 
 import tabby from "../images/tabby.svg"
 import airbnb from "../images/airbnb.svg"
@@ -19,8 +20,7 @@ import sales from "../images/salesforce.svg"
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<link href="https://fonts.cdnfonts.com/css/satoshi?styles=135000" rel="stylesheet">
-                
+		<link href="https://fonts.cdnfonts.com/css/satoshi?styles=135000" rel="stylesheet">    
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
@@ -48,20 +48,32 @@ import sales from "../images/salesforce.svg"
 			</div>
 
 			<div class=" font-bold flex font-satoshi text-4xl justify-center items-center mt-8">
-				<h2 class=" text-center">Three-step process, </h2> <h2 class=" italic text-amber-600 font-Inconsolate"> lasting results</h2>
+				<h2 class=" text-center">Three-step process and lasting results</h2>
 			</div>
 			<p class=" text-center mt-8">Three simple steps from consultation to completion</p>
-			<div class=" flex justify-between items-center mt-10">
-				<div class=" h-16 w-16 bg-yellow-100 rounded-full text-4xl flex justify-center items-center font-satoshi">1</div>
-				<div class=" h-16 w-16 bg-yellow-100 rounded-full text-4xl flex justify-center items-center font-satoshi">2</div>
-				<div class=" h-16 w-16 bg-yellow-100 rounded-full text-4xl flex justify-center items-center font-satoshi">3</div>
+			<div class=" flex mt-10 font-satoshi">
+				<div class=" ml-4">
+					<Image src={request} alt="hgjkhgfhjkh" width={40}></Image>
+					<span>Request</span>
+					<p>Schedule your time and make a call to us and see whats on offer</p>
+				</div>
+				<div class=" ml-4">
+					<Image src={deliver} alt="hgjkhgfhjkh" width={40}></Image>
+					<span>Deliver</span>
+					<p>Schedule your time and make a call to us and see whats on offer</p>
+				</div>
+				<div class=" ml-4">
+					<Image src={install} alt="hgjkhgfhjkh" width={40}></Image>
+					<span>Installation</span>
+					<p>Schedule your time and make a call to us and see whats on offer</p>
+				</div>
 			</div>
 			
-			<div class=" bg-yellow-100 mt-24">
+			<div class=" bg-amber-50 mt-24 font-satoshi">
 				<Image src={logo} alt="vbcvgfhjkl" height={80} class=" mx-auto rounded-full mt-8"></Image>
 
 				<div class=" text-center mt-10">
-					<h1>Econo Covers more than you think</h1>
+					<h1 class=" text-3xl">Econo Covers more than you think</h1>
 					<p class=" mt-4">From elegant cabrons, stone work, roofing and roofing tailors, sand, ballast, gypsum boards and  cement etc</p>
 				</div>
 
@@ -69,17 +81,17 @@ import sales from "../images/salesforce.svg"
 					<h2 class=" text-center mt-10">Here is what we offer</h2>
 					<div>
 						<div class=" flex justify-center items-center mt-10">
-							<div class=" w-80 h-60 ml-8 bg-slate-400 rounded-lg">
+							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Sand</span>
 								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
 									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
 							</div>
-							<div class=" w-80 h-60 ml-8 bg-slate-400 rounded-lg">
+							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Cement</span>
 								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
 									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
 							</div>
-							<div class=" w-80 h-60 ml-8 bg-slate-400 rounded-lg">
+							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Steel Bars</span>
 								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
 									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
@@ -88,17 +100,17 @@ import sales from "../images/salesforce.svg"
 					</div>
 					<div>
 						<div class=" flex justify-center items-center mt-10">
-							<div class=" w-80 h-60 ml-8 bg-slate-400 rounded-lg">
+							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Sand</span>
 								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
 									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
 							</div>
-							<div class=" w-80 h-60 ml-8 bg-slate-400 rounded-lg">
+							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Cement</span>
 								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
 									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
 							</div>
-							<div class=" w-80 h-60 ml-8 bg-slate-400 rounded-lg">
+							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Steel Bars</span>
 								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
 									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
