--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ import sales from "../images/salesforce.svg"
 				<h2 class=" text-center">Three-step process and lasting results</h2>
 			</div>
 			<p class=" text-center mt-8">Three simple steps from consultation to completion</p>
-			<div class=" flex mt-10 font-satoshi">
+			<div class=" block mt-10 lg:flex lg:mt-10 font-satoshi">
 				<div class=" ml-4">
 					<Image src={request} alt="hgjkhgfhjkh" width={40}></Image>
 					<span>Request</span>
@@ -80,7 +80,7 @@ import sales from "../images/salesforce.svg"
 				<div>
 					<h2 class=" text-center mt-10">Here is what we offer</h2>
 					<div>
-						<div class=" flex justify-center items-center mt-10">
+						<div class=" block lg:flex justify-center items-center mt-10">
 							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Sand</span>
 								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
@@ -99,7 +99,7 @@ import sales from "../images/salesforce.svg"
 						</div>
 					</div>
 					<div>
-						<div class=" flex justify-center items-center mt-10">
+						<div class=" block lg:flex justify-center items-center mt-10">
 							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Sand</span>
 								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
