--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,25 +44,25 @@ import sales from "../images/salesforce.svg"
 				<Image src={tabby} alt="sagjhj" width={50} class="ml-8"></Image>
 				<Image src={airbnb} alt="sagjhj" width={80} class="ml-8"></Image>
 				<Image src={sales} alt="sagjhj" width={60} class="ml-8"></Image>
-				<Image src={trustpilot} alt="sagjhj" width={100} class="ml-8"></Image>
+				<!-- <Image src={trustpilot} alt="sagjhj" width={100} class="ml-8"></Image> -->
 			</div>
 
 			<div class=" font-bold flex font-satoshi text-4xl justify-center items-center mt-8">
 				<h2 class=" text-center">Three-step process and lasting results</h2>
 			</div>
 			<p class=" text-center mt-8">Three simple steps from consultation to completion</p>
-			<div class=" block mt-10 lg:flex lg:mt-10 font-satoshi">
-				<div class=" ml-4">
+			<div class=" block lg:flex lg:mt-10 font-satoshi">
+				<div class=" ml-4 mt-8">
 					<Image src={request} alt="hgjkhgfhjkh" width={40}></Image>
 					<span>Request</span>
 					<p>Schedule your time and make a call to us and see whats on offer</p>
 				</div>
-				<div class=" ml-4">
+				<div class=" ml-4 mt-8">
 					<Image src={deliver} alt="hgjkhgfhjkh" width={40}></Image>
 					<span>Deliver</span>
 					<p>Schedule your time and make a call to us and see whats on offer</p>
 				</div>
-				<div class=" ml-4">
+				<div class=" ml-4 mt-8">
 					<Image src={install} alt="hgjkhgfhjkh" width={40}></Image>
 					<span>Installation</span>
 					<p>Schedule your time and make a call to us and see whats on offer</p>
@@ -99,7 +99,7 @@ import sales from "../images/salesforce.svg"
 						</div>
 					</div>
 					<div>
-						<div class=" block lg:flex justify-center items-center mt-10">
+						<div class=" block justify-center items-center lg:flex lg:justify-center lg:items-center mt-10">
 							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Sand</span>
 								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
