replaced placeholder text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,12 +39,11 @@ import sales from "../images/salesforce.svg"
 				<h1 class=" absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-6xl">Your future is secured with expert construction</h1>
 		</div>
 		<!-- text  -->
-			<div class=" flex items-center mt-8 font-bold font-satoshi">
+			<div class=" flex justify-center items-center mt-8 font-bold font-satoshi">
 				<p>Trusted by</p>
-				<Image src={tabby} alt="sagjhj" width={50} class="ml-8"></Image>
 				<Image src={airbnb} alt="sagjhj" width={80} class="ml-8"></Image>
 				<Image src={sales} alt="sagjhj" width={60} class="ml-8"></Image>
-				<!-- <Image src={trustpilot} alt="sagjhj" width={100} class="ml-8"></Image> -->
+				<Image src={trustpilot} alt="sagjhj" width={100} class="ml-8"></Image>
 			</div>
 
 			<div class=" font-bold flex font-satoshi text-4xl justify-center items-center mt-8">
@@ -54,23 +53,23 @@ import sales from "../images/salesforce.svg"
 			<div class=" block lg:flex lg:mt-10 font-satoshi">
 				<div class=" ml-4 mt-8">
 					<Image src={request} alt="hgjkhgfhjkh" width={40}></Image>
-					<span>Request</span>
+					<span class=" text-emerald-500">Request</span>
 					<p>Schedule your time and make a call to us and see whats on offer</p>
 				</div>
 				<div class=" ml-4 mt-8">
 					<Image src={deliver} alt="hgjkhgfhjkh" width={40}></Image>
-					<span>Deliver</span>
+					<span class=" text-fuchsia-500">Deliver</span>
 					<p>Schedule your time and make a call to us and see whats on offer</p>
 				</div>
 				<div class=" ml-4 mt-8">
 					<Image src={install} alt="hgjkhgfhjkh" width={40}></Image>
-					<span>Installation</span>
+					<span class=" text-sky-500">Installation</span>
 					<p>Schedule your time and make a call to us and see whats on offer</p>
 				</div>
 			</div>
 			
 			<div class=" bg-amber-50 mt-24 font-satoshi">
-				<Image src={logo} alt="vbcvgfhjkl" height={80} class=" mx-auto rounded-full mt-8"></Image>
+				<Image src={logo} alt="vbcvgfhjkl" height={80} class=" mx-auto rounded-sm mt-8"></Image>
 
 				<div class=" text-center mt-10">
 					<h1 class=" text-3xl">Econo Covers more than you think</h1>
@@ -81,39 +80,37 @@ import sales from "../images/salesforce.svg"
 					<h2 class=" text-center mt-10">Here is what we offer</h2>
 					<div>
 						<div class=" block lg:flex justify-center items-center mt-10">
-							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Sand</span>
-								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
-									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
+								<p class=" ml-2">Quality sand that has been sifted and checked by our experts to ensure it meets our strict quality standards.</p>
 							</div>
-							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Cement</span>
-								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
-									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
+								<p class=" ml-2">We source our cement from companies you have come to know and trust.</p>
 							</div>
-							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Steel Bars</span>
-								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
-									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
+								<p class=" ml-2">Industrial grade steel bars that are guaranteed to hold any construction of your choice.</p>
 							</div>
 						</div>
 					</div>
 					<div>
 						<div class=" block justify-center items-center lg:flex lg:justify-center lg:items-center mt-10">
-							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
-								<span class=" ml-2 font-bold text-2xl">Sand</span>
-								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
-									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
+							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+								<span class=" ml-2 font-bold text-2xl">Stones</span>
+								<p class=" ml-2">High quality stones and stonework sourced from Kenyan mines by kenyans and has been precision
+									cut to meet your requirements.</p>
 							</div>
-							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
-								<span class=" ml-2 font-bold text-2xl">Cement</span>
-								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
-									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
+							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+								<span class=" ml-2 font-bold text-2xl">Cabrons</span>
+								<p class=" ml-2">All purpose carbs that can be used anywhere and everywhere. They have been stress tested to meet
+									our very high standard guidelines.
+								</p>
 							</div>
-							<div class=" w-80 h-60 ml-8 bg-lime-50 rounded-lg">
-								<span class=" ml-2 font-bold text-2xl">Steel Bars</span>
-								<p class=" ml-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cum nostrum porro incidunt minus magni eaque 
-									obcaecati eveniet earum ullam odit labore expedita, nulla sunt! Voluptate dolorem fugiat quam accusamus.</p>
+							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+								<span class=" ml-2 font-bold text-2xl">Cladding</span>
+								<p class=" ml-2">Transform your space with our exquisite cladding solutions! Elevate the aesthetics and durability 
+									of your building with our premium cladding materials.</p>
 							</div>
 						</div>
 					</div>
