--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,7 +96,7 @@ import sales from "../images/salesforce.svg"
 					</div>
 					<div>
 						<div class=" block justify-center items-center lg:flex lg:justify-center lg:items-center mt-10">
-							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class="w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Stones</span>
 								<p class=" ml-2">High quality stones and stonework sourced from Kenyan mines by kenyans and has been precision
 									cut to meet your requirements.</p>
