fixed widths on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,15 +80,15 @@ import sales from "../images/salesforce.svg"
 					<h2 class=" text-center mt-10">Here is what we offer</h2>
 					<div>
 						<div class=" block lg:flex justify-center items-center mt-10">
-							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Sand</span>
 								<p class=" ml-2">Quality sand that has been sifted and checked by our experts to ensure it meets our strict quality standards.</p>
 							</div>
-							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Cement</span>
 								<p class=" ml-2">We source our cement from companies you have come to know and trust.</p>
 							</div>
-							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Steel Bars</span>
 								<p class=" ml-2">Industrial grade steel bars that are guaranteed to hold any construction of your choice.</p>
 							</div>
@@ -101,13 +101,13 @@ import sales from "../images/salesforce.svg"
 								<p class=" ml-2">High quality stones and stonework sourced from Kenyan mines by kenyans and has been precision
 									cut to meet your requirements.</p>
 							</div>
-							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Cabrons</span>
 								<p class=" ml-2">All purpose carbs that can be used anywhere and everywhere. They have been stress tested to meet
 									our very high standard guidelines.
 								</p>
 							</div>
-							<div class=" w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Cladding</span>
 								<p class=" ml-2">Transform your space with our exquisite cladding solutions! Elevate the aesthetics and durability 
 									of your building with our premium cladding materials.</p>
