--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import sales from "../images/salesforce.svg"
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
 		<title>Construction | Company</title>
 	</head>
-	<body class=" max-w-screen-xl mx-auto font-Inconsolate">
+	<body class=" max-w-screen-xl mx-auto font-Inconsolate bg-black text-white">
 		<nav class=" font-Inconsolate font-bold flex items-center">
 			<a><Image src={logo} alt="company logo" height={80}></Image></a>
 			<a href="#" class=" ml-8">About</a>
@@ -50,6 +50,7 @@ import sales from "../images/salesforce.svg"
 				<h2 class=" text-center">Three-step process and lasting results</h2>
 			</div>
 			<p class=" text-center mt-8">Three simple steps from consultation to completion</p>
+			<p>Colors used: Neon blue (#2272FF), black (#1D1D1)</p>
 			<div class=" block lg:flex lg:mt-10 font-satoshi">
 				<div class=" ml-4 mt-8">
 					<Image src={request} alt="hgjkhgfhjkh" width={40}></Image>
@@ -68,7 +69,7 @@ import sales from "../images/salesforce.svg"
 				</div>
 			</div>
 			
-			<div class=" bg-amber-50 mt-24 font-satoshi">
+			<div class=" bg-amber-50 mt-24 font-satoshi text-black rounded-3xl">
 				<Image src={logo} alt="vbcvgfhjkl" height={80} class=" mx-auto rounded-sm mt-8"></Image>
 
 				<div class=" text-center mt-10">
