--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,13 +28,13 @@ import sales from "../images/salesforce.svg"
 	</head>
 	<body class=" max-w-screen-xl mx-auto font-Inconsolate bg-black text-white">
 		<nav class=" font-Inconsolate font-bold flex items-center">
-			<a><Image src={logo} alt="company logo" height={80}></Image></a>
+			<a><Image src={logo} alt="company logo" height={80} class=" rounded-full"></Image></a>
 			<a href="#" class=" ml-8">About</a>
 			<a class=" ml-8">Services</a>
 			<a class=" ml-8">Contact Us</a>
 		</nav>
 		<!-- background image  -->
-		<div class=" relative font-satoshi">
+		<div class=" relative font-satoshi mt-10">
 			<Image src={background} alt="background" class=" rounded-3xl"></Image>
 				<h1 class=" absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-6xl">Your future is secured with expert construction</h1>
 		</div>
@@ -69,27 +69,27 @@ import sales from "../images/salesforce.svg"
 				</div>
 			</div>
 			
-			<div class=" bg-amber-50 mt-24 font-satoshi text-black rounded-3xl">
-				<Image src={logo} alt="vbcvgfhjkl" height={80} class=" mx-auto rounded-sm mt-8"></Image>
+			<div class=" bg-black mt-24 font-satoshi text-black rounded-3xl">
+				<Image src={logo} alt="vbcvgfhjkl" height={80} class=" mx-auto rounded-full mt-8"></Image>
 
-				<div class=" text-center mt-10">
+				<div class=" text-center mt-10 text-white">
 					<h1 class=" text-3xl">Econo Covers more than you think</h1>
 					<p class=" mt-4">From elegant cabrons, stone work, roofing and roofing tailors, sand, ballast, gypsum boards and  cement etc</p>
 				</div>
 
 				<div>
-					<h2 class=" text-center mt-10">Here is what we offer</h2>
+					<h2 class=" text-center mt-10 text-white">Here is what we offer</h2>
 					<div>
 						<div class=" block lg:flex justify-center items-center mt-10">
-							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Sand</span>
 								<p class=" ml-2">Quality sand that has been sifted and checked by our experts to ensure it meets our strict quality standards.</p>
 							</div>
-							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Cement</span>
 								<p class=" ml-2">We source our cement from companies you have come to know and trust.</p>
 							</div>
-							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Steel Bars</span>
 								<p class=" ml-2">Industrial grade steel bars that are guaranteed to hold any construction of your choice.</p>
 							</div>
@@ -97,18 +97,18 @@ import sales from "../images/salesforce.svg"
 					</div>
 					<div>
 						<div class=" block justify-center items-center lg:flex lg:justify-center lg:items-center mt-10">
-							<div class="w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class="w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Stones</span>
 								<p class=" ml-2">High quality stones and stonework sourced from Kenyan mines by kenyans and has been precision
 									cut to meet your requirements.</p>
 							</div>
-							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Cabrons</span>
 								<p class=" ml-2">All purpose carbs that can be used anywhere and everywhere. They have been stress tested to meet
 									our very high standard guidelines.
 								</p>
 							</div>
-							<div class=" w-auto lg:w-80 h-60 mt-10 ml-8 bg-lime-50 rounded-lg">
+							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
 								<span class=" ml-2 font-bold text-2xl">Cladding</span>
 								<p class=" ml-2">Transform your space with our exquisite cladding solutions! Elevate the aesthetics and durability 
 									of your building with our premium cladding materials.</p>
