--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import background from "../images/bg3.jpg"
 import deliver from "../images/deliver.png"
 import install from "../images/install.png"
 import request from "../images/request.png"
+import wood from "../images/wood_cutting_using_jigsaw (720p).mp4"
 
-import tabby from "../images/tabby.svg"
 import airbnb from "../images/airbnb.svg"
 import trustpilot from "../images/trustpilot.svg"
 import sales from "../images/salesforce.svg"
@@ -117,14 +117,14 @@ import sales from "../images/salesforce.svg"
 					</div>
 				</div>	
 			</div>
-
-			<div class=" text-center font-bold text-2xl mt-6">
-				<h2>Gallery</h2>
-				<!-- <div class=" flex justify-center items-center">
-					<Image src={cable} alt="ghjkljhgfvb" width={300} class=" rounded-2xl"></Image>
-					<Image src={brick} alt="ghjkljhgfvb" width={300} class=" rounded-2xl ml-4"></Image>
-					<Image src={cable} alt="ghjkljhgfvb" width={300} class=" rounded-2xl ml-4"></Image>
-				</div> -->
-			</div>
+			<section class=" w-full h-full relative snap-start mt-10">
+				<video class=" object-cover w-full h-full rounded-md" src={wood} autoplay loop muted ></video>
+				<div class=" bg-slate-800/60 absolute top-0 left-0 w-full h-full">
+					<div>
+						<article class=" absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-6xl">
+							<h1>ECONO CONSTRUCTION COMPANY</h1>
+						</article>
+				</div>
+			</section>
 	</body>
 </html>
