--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,9 @@
 import { Image } from "astro:assets"
 import logo from "../images/logo.jpg"
 import background from "../images/bg3.jpg"
-import deliver from "../images/deliver.png"
-import install from "../images/install.png"
-import request from "../images/request.png"
+import deliver from "../images/deliver3.png"
+import install from "../images/install3.png"
+import request from "../images/request2.png"
 import wood from "../images/wood_cutting_using_jigsaw (720p).mp4"
 
 import airbnb from "../images/airbnb.svg"
@@ -39,18 +39,17 @@ import sales from "../images/salesforce.svg"
 				<h1 class=" absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-6xl">Your future is secured with expert construction</h1>
 		</div>
 		<!-- text  -->
-			<div class=" flex justify-center items-center mt-8 font-bold font-satoshi">
+			<div class=" flex justify-center items-center mt-14 font-bold font-satoshi">
 				<p>Trusted by</p>
 				<Image src={airbnb} alt="sagjhj" width={80} class="ml-8"></Image>
 				<Image src={sales} alt="sagjhj" width={60} class="ml-8"></Image>
 				<Image src={trustpilot} alt="sagjhj" width={100} class="ml-8"></Image>
 			</div>
 
-			<div class=" font-bold flex font-satoshi text-4xl justify-center items-center mt-8">
+			<div class=" font-bold flex font-satoshi text-4xl justify-center items-center mt-20">
 				<h2 class=" text-center">Three-step process and lasting results</h2>
 			</div>
 			<p class=" text-center mt-8">Three simple steps from consultation to completion</p>
-			<p>Colors used: Neon blue (#2272FF), black (#1D1D1)</p>
 			<div class=" block lg:flex lg:mt-10 font-satoshi">
 				<div class=" ml-4 mt-8">
 					<Image src={request} alt="hgjkhgfhjkh" width={40}></Image>
