--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
+import Footer from '../components/Footer.astro'
+import Gallery from '../components/Gallery.astro'
+import Services from "../components/Services.astro"
+import Player from '../components/Player.astro'
+import Navbar from '../components/Navbar.astro'
+
 import { Image } from "astro:assets"
-import logo from "../images/logo.jpg"
 import background from "../images/bg3.jpg"
-import deliver from "../images/deliver3.png"
-import install from "../images/install3.png"
-import request from "../images/request2.png"
-import wood from "../images/wood_cutting_using_jigsaw (720p).mp4"
 
 import airbnb from "../images/airbnb.svg"
 import trustpilot from "../images/trustpilot.svg"
@@ -26,13 +27,9 @@ import sales from "../images/salesforce.svg"
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
 		<title>Construction | Company</title>
 	</head>
-	<body class=" max-w-screen-xl mx-auto font-Inconsolate bg-black text-white">
-		<nav class=" font-Inconsolate font-bold flex items-center">
-			<a><Image src={logo} alt="company logo" height={80} class=" rounded-full"></Image></a>
-			<a href="#" class=" ml-8">About</a>
-			<a class=" ml-8">Services</a>
-			<a class=" ml-8">Contact Us</a>
-		</nav>
+	<body class=" max-w-screen-xl mx-auto font-satoshi bg-black text-white">
+		<Navbar />
+		
 		<!-- background image  -->
 		<div class=" relative font-satoshi mt-10">
 			<Image src={background} alt="background" class=" rounded-3xl"></Image>
@@ -45,85 +42,11 @@ import sales from "../images/salesforce.svg"
 				<Image src={sales} alt="sagjhj" width={60} class="ml-8"></Image>
 				<Image src={trustpilot} alt="sagjhj" width={100} class="ml-8"></Image>
 			</div>
-
-			<div class=" font-bold flex font-satoshi text-4xl justify-center items-center mt-20">
-				<h2 class=" text-center">Three-step process and lasting results</h2>
-			</div>
-			<p class=" text-center mt-8">Three simple steps from consultation to completion</p>
-			<div class=" block lg:flex lg:mt-10 font-satoshi">
-				<div class=" ml-4 mt-8">
-					<Image src={request} alt="hgjkhgfhjkh" width={40}></Image>
-					<span class=" text-emerald-500">Request</span>
-					<p>Schedule your time and make a call to us and see whats on offer</p>
-				</div>
-				<div class=" ml-4 mt-8">
-					<Image src={deliver} alt="hgjkhgfhjkh" width={40}></Image>
-					<span class=" text-fuchsia-500">Deliver</span>
-					<p>Schedule your time and make a call to us and see whats on offer</p>
-				</div>
-				<div class=" ml-4 mt-8">
-					<Image src={install} alt="hgjkhgfhjkh" width={40}></Image>
-					<span class=" text-sky-500">Installation</span>
-					<p>Schedule your time and make a call to us and see whats on offer</p>
-				</div>
-			</div>
 			
-			<div class=" bg-black mt-24 font-satoshi text-black rounded-3xl">
-				<Image src={logo} alt="vbcvgfhjkl" height={80} class=" mx-auto rounded-full mt-8"></Image>
-
-				<div class=" text-center mt-10 text-white">
-					<h1 class=" text-3xl">Econo Covers more than you think</h1>
-					<p class=" mt-4">From elegant cabrons, stone work, roofing and roofing tailors, sand, ballast, gypsum boards and  cement etc</p>
-				</div>
-
-				<div>
-					<h2 class=" text-center mt-10 text-white">Here is what we offer</h2>
-					<div>
-						<div class=" block lg:flex justify-center items-center mt-10">
-							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
-								<span class=" ml-2 font-bold text-2xl">Sand</span>
-								<p class=" ml-2">Quality sand that has been sifted and checked by our experts to ensure it meets our strict quality standards.</p>
-							</div>
-							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
-								<span class=" ml-2 font-bold text-2xl">Cement</span>
-								<p class=" ml-2">We source our cement from companies you have come to know and trust.</p>
-							</div>
-							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
-								<span class=" ml-2 font-bold text-2xl">Steel Bars</span>
-								<p class=" ml-2">Industrial grade steel bars that are guaranteed to hold any construction of your choice.</p>
-							</div>
-						</div>
-					</div>
-					<div>
-						<div class=" block justify-center items-center lg:flex lg:justify-center lg:items-center mt-10">
-							<div class="w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
-								<span class=" ml-2 font-bold text-2xl">Stones</span>
-								<p class=" ml-2">High quality stones and stonework sourced from Kenyan mines by kenyans and has been precision
-									cut to meet your requirements.</p>
-							</div>
-							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
-								<span class=" ml-2 font-bold text-2xl">Cabrons</span>
-								<p class=" ml-2">All purpose carbs that can be used anywhere and everywhere. They have been stress tested to meet
-									our very high standard guidelines.
-								</p>
-							</div>
-							<div class=" w-auto lg:w-80 h-44 mt-10 ml-8 bg-lime-50 rounded-lg">
-								<span class=" ml-2 font-bold text-2xl">Cladding</span>
-								<p class=" ml-2">Transform your space with our exquisite cladding solutions! Elevate the aesthetics and durability 
-									of your building with our premium cladding materials.</p>
-							</div>
-						</div>
-					</div>
-				</div>	
-			</div>
-			<section class=" w-full h-full relative snap-start mt-10">
-				<video class=" object-cover w-full h-full rounded-md" src={wood} autoplay loop muted ></video>
-				<div class=" bg-slate-800/60 absolute top-0 left-0 w-full h-full">
-					<div>
-						<article class=" absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-6xl">
-							<h1>ECONO CONSTRUCTION COMPANY</h1>
-						</article>
-				</div>
-			</section>
+			<Services />
+			<Player />
+			<Gallery />
+			<Footer />
+			  
 	</body>
 </html>
