--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import sales from "../images/salesforce.svg"
 		<!-- background image  -->
 		<div class=" relative font-satoshi mt-10">
 			<Image src={background} alt="background" class=" rounded-3xl"></Image>
-				<h1 class=" absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-6xl">Your future is secured with expert construction</h1>
+				<h1 class=" absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-6xl">Your future is secured with Econo construction Company</h1>
 		</div>
 		<!-- text  -->
 			<div class=" flex justify-center items-center mt-14 font-bold font-satoshi">
